--- a/public/css/page-stop.css
+++ b/public/css/page-stop.css
@@ -7,7 +7,7 @@ aside.sidebar {
   position: fixed;
   height: 100%;
   padding: 3.2rem 2.4rem;
-  background: #15c3d6;
+  background: linear-gradient(329.54deg, #57C5B6 0%, #57C5B6 100%);
 
   display: flex;
   flex-direction: column;
@@ -19,7 +19,7 @@ aside.sidebar footer button {
   width: 48px;
   height: 48px;
   border: none;
-  background: #12afcb;
+  background: #f6c148;
   border-radius: 1.6rem;
   cursor: pointer;
 
@@ -31,11 +31,15 @@ aside.sidebar footer button {
 }
 
 aside.sidebar footer button:hover {
-  background: #17d6eb;
+  background: #e7b238;
 }
 
 .with-sidebar {
   padding-left: 96px;
+}
+
+main{
+  flex: 1;
 }
 
 /* details */
@@ -124,7 +128,92 @@ aside.sidebar footer button:hover {
   text-align: center;
 }
 
-.map-container a {
+.map-container footer a {
   color: #0089a5;
   text-decoration: none;
 }
+
+.map-container .leaflet-container {
+  border-bottom: 1px solid #dde3f0;
+  border-radius: 2rem;
+}
+
+.stop-details-content hr{
+  width: 100%;
+  height: 1px;
+
+  border: 0;
+
+  background: #d3e2e6;
+
+  margin: 6.4rem 0;
+}
+
+.stop-details-content h2 {
+  font-size: 3.6rem;
+  line-height: 1.5rem;
+  color: #4d6f80;
+}
+
+.open-details{
+  margin-top: 2.4rem;
+
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 2rem;
+}
+
+/* .open-details div{
+  padding: 3.2rem 2.4rem;
+} */
+
+.open-details img{
+  display: block;
+  margin-bottom: 2rem;
+}
+
+.open-details .hour{
+  background: linear-gradient(149.97deg, #e6f7fb 8.13%, #ffffff 92.67%);
+  border: 1px solid #b3dae2;
+  border-radius: 20px;
+
+  color: #5c8599;
+}
+
+.open-details .open-on-weekends{
+  background: linear-gradient(154.16deg, #edfff6 7.85%, #ffffff 91.03%);
+  border: 1px solid #a1e9c5;
+  border-radius: 20px;
+
+  color: #37c77f;
+}
+
+.primary-button{
+  margin-top: 6.4rem;
+
+  width: 100%;
+  height: 6.4rem;
+  border: 0;
+
+  cursor: pointer;
+
+  background: #3cdc8c;
+
+  border-radius: 2rem;
+  color: white;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  transition: background-color .2s;
+}
+
+.primary-button:hover{
+  background: #36cf82;
+}
+
+.primary-button img{
+  margin-right: 1.6rem;
+}
+
