--- a/public/css/form.css
+++ b/public/css/form.css
@@ -90,6 +90,9 @@ fieldset legend{
     position: relative;
 }
 
+.new-upload + .new-upload{
+    margin-top: 2.4rem;
+}
 
 .new-upload span{
     position: absolute;
