--- a/public/css/page-stop.css
+++ b/public/css/page-stop.css
@@ -38,6 +38,7 @@ main{
 .images button {
   border: 0;
   background: none;
+
   height: 8.8rem;
   cursor: pointer;
   border-radius: 2rem;
@@ -60,6 +61,8 @@ main{
   object-fit: cover;
 }
 
+/* stop-details-content */
+
 .stop-details-content {
   padding: 8rem;
 }
@@ -76,8 +79,6 @@ main{
   color: #5c8599;
   margin-top: 2.4rem;
 }
-
-
 
 .stop-details-content hr{
   width: 100%;
@@ -122,10 +123,18 @@ main{
 }
 
 .open-details .open-on-weekends{
-  background: linear-gradient(154.16deg, #edfff6 7.85%, #ffffff 91.03%);
-  border: 1px solid #a1e9c5;
+  
   border-radius: 20px;
-
-  color: #37c77f;
 }
 
+.open-on-weekends.open {
+  background: linear-gradient(154.16deg, #EDFFF6 7.85%, #FFFFFF 91.03%);
+  border: 1px solid #A1E9C5;
+  color: #37C77F;
+}
+
+.open-on-weekends.closed {
+  background: linear-gradient(154.16deg, #FCF0F4 7.85%, #FFFFFF 91.03%);
+  border: 1px solid #FFBCD4;
+  color: #FF999D;
+}
