--- a/src/views/create-stop.hbs
+++ b/src/views/create-stop.hbs
@@ -46,7 +46,7 @@
 
     <main class="animate-appear with-sidebar">
 
-      <form action="">
+      <form action="save-stop" method="post" onsubmit="validate(event)">
         <fieldset>
           <legend>Dados</legend>
 
