--- a/src/views/create-stop.hbs
+++ b/src/views/create-stop.hbs
@@ -71,10 +71,10 @@
             <input id="numero" placeholder="0" name="numero" required/>
           </div>
 
-          <!-- <div class="input-block">
-            <label for="cep">CEP</label>
-            <input id="cep" name="cep" required/>
-          </div> -->
+          <div class="input-block">
+            <label for="bairro">Bairro</label>
+            <input id="bairro" name="bairro" required/>
+          </div>
 
           <div class="input-block">
             <label for="cidade">Cidade</label>
