--- a/src/views/stop.hbs
+++ b/src/views/stop.hbs
@@ -57,9 +57,9 @@
         </div>
 
         <div class="stop-details-content">
-          <h1>{{stop.name}}</h1>
+          <h1>PetStop {{stop.bairro}} #{{stop.id}}</h1>
           <p>
-           {{stop.endereco}}, {{stop.number_endereco}}, {{stop.city}}, {{stop.reference_point}}
+           {{stop.endereco}}, {{stop.number_endereco}}, {{stop.bairro}}, {{stop.city}}, {{stop.reference_point}}
           </p>
 
           <div class="map-container">
