--- a/src/views/create-stop.hbs
+++ b/src/views/create-stop.hbs
@@ -103,7 +103,7 @@
             <div class="images-upload" id="images">
 
               <div class="new-upload">
-                <input name="images" placeholder="Cole o link da foto aqui" required />
+                <input name="images" type="file" placeholder="Cole o link da foto aqui" required />
                 <span onclick="deleteField(event)">
                   <img src="/images/remove-file.svg" alt="Remover Foto">
                 </span>
@@ -123,8 +123,8 @@
             <label for="petstop-hidtatacao-alimentação">Qual ponto deseja cadastrar?</label>
             <input 
             type="hidden" 
-            id="petstop-hidtatacao-alimentação" 
-            name="petstop-hidtatacao-alimentação" 
+            id="pha" 
+            name="pha" 
             value="1" 
             required
             />
