--- a/src/views/stop.hbs
+++ b/src/views/stop.hbs
@@ -75,7 +75,7 @@
 
           <h2>Informações sobre o ponto</h2>
 
-          <p>Você pode contribuir com ração e água e muito amor =D</p>
+          <p>Você pode contribuir com ração, água e muito amor =D</p>
 
           <div class="open-details">
             <div class="hour">
