--- a/src/views/stops.hbs
+++ b/src/views/stops.hbs
@@ -54,7 +54,7 @@
         {{#each stops}}
           <span hidden
             data-id="{{this.id}}"
-            data-name="{{this.name}}"
+            data-name="PetStop {{this.bairro}} #{{this.id}}"
             data-lat="{{this.lat}}"
             data-lng="{{this.lng}}"
           ></span>
