--- a/src/views/stops.hbs
+++ b/src/views/stops.hbs
@@ -35,7 +35,9 @@
     <div id="page-stops">
       <aside class="animate-rigth">
         <header>
+          <a href="http://127.0.0.1:5500/">
           <img src="/images/map-marker.svg" alt="PetStop" />
+          </a>
 
           <h2>Escolha uma parada no mapa</h2>
 
