Botão de confirmação abastecimento do ponto FRONT

--- a/src/views/stop.hbs
+++ b/src/views/stop.hbs
@@ -22,6 +22,8 @@
   <link rel="stylesheet" href="/css/buttons.css" />
   <link rel="stylesheet" href="/css/page-stop.css" />
 
+  <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.12/dist/sweetalert2.min.css" rel="stylesheet" />
+
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet" />
@@ -118,7 +120,8 @@
                   Água e Ração
                 </button>
               </div>
-              <button type="submit" class="primary-button">
+              <button type="submit" onclick="confirmarAbastecimento()" id="btnSalvarAbastecimento"
+                class="primary-button">
                 Abastecer</button>
             </div>
           </fieldset>
@@ -127,7 +130,10 @@
     </main>
   </div>
 
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.12/dist/sweetalert2.all.min.js"></script>
   <script src="/scripts/page-stop.js"></script>
+
+
 </body>
 
 </html>
