--- a/src/views/stop.hbs
+++ b/src/views/stop.hbs
@@ -32,8 +32,9 @@
 <body>
   <div id="page-stop">
     <aside class="animate-rigth sidebar">
-
+      <a href="http://127.0.0.1:5500/">
       <img src="/images/map-marker.svg" alt="Ponto">
+      </a>
 
       <footer>
         <button onclick="history.back()">
