--- a/public/css/form.css
+++ b/public/css/form.css
@@ -59,7 +59,7 @@ fieldset legend{
 
 .input-block input{
     height: 6.4rem;
-    padding: 0 1.6rem;
+    padding: 1.6rem 1.6rem 0;
 }
 
 .input-block input:valid,
