--- a/src/views/stop.hbs
+++ b/src/views/stop.hbs
@@ -27,13 +27,36 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet" />
+  
+          <script>
+            // Cria campo se type_point for 1
+            function Seletor() {
+              var ponto = {{ stop.type_point }};
+
+            if (ponto == false) {
+              document.getElementById("btnAbastecimentoAgua").style.display = "none";
+              document.getElementById("btnAbastecimentoRacao").style.display = "none";
+              document.getElementById("btnAbastecimentoRacaoAgua").style.display = "none";
+            }
+
+            if (ponto == 1) {
+              document.getElementById("btnAbastecimentoRacao").style.display = "none";
+              document.getElementById("btnAbastecimentoRacaoAgua").style.display = "none";
+            }
+            if (ponto == 2) {
+              document.getElementById("btnAbastecimentoAgua").style.display = "none";
+              document.getElementById("btnAbastecimentoRacaoAgua").style.display = "none";
+            }
+            
+          }
+          </script>
 </head>
 
-<body>
+<body onload="Seletor()">
   <div id="page-stop">
     <aside class="animate-rigth sidebar">
       <a href="http://127.0.0.1:5500/">
-      <img src="/images/map-marker.svg" alt="Ponto">
+        <img src="/images/map-marker.svg" alt="Ponto">
       </a>
 
       <footer>
@@ -48,12 +71,12 @@
 
     <main class="animate-appear with-sidebar">
       <div class="stop-details">
-        <img src="{{stop.firstImage}}" alt="{{stop.name}}" />
+        <img src="images/{{stop.firstImage}}" alt="{{stop.name}}" />
 
         <div class="images">
           {{#each stop.images}}
           <button onclick="selectImage(event)" class="active" type="button">
-            <img src="{{this}}" alt="{{stop.name}}" />
+            <img src="images/{{this}}" alt="{{stop.name}}" /> 
           </button>
           {{/each}}
 
@@ -124,20 +147,20 @@
               <label for="abastece-hidratacao-alimentacao">Qual ponto deseja cadastrar?</label>
               <input type="hidden" id="pha" name="pha" value="1" required />
 
-               //Condição para mostrar o botão de abastecimento de acordo com o tipo de ponto cadastrado
+              //Condição para mostrar o botão de abastecimento de acordo com o tipo de ponto cadastrado
 
               {{!-- {{#isEqual stop.pha "1"}} --}}
               <div class="button-select">
                 <button data-value="1" onclick="toggleSelect(event)" type="button" id="btnAbastecimentoAgua">
                   Água
                 </button>
-              {{!-- {{else if isEqual stop.pha "2"}} --}}
+                {{!-- {{else if isEqual stop.pha "2"}} --}}
                 <button data-value="2" onclick="toggleSelect(event)" type="button" id="btnAbastecimentoRacao">
                   Ração
                 </button>
 
-              {{!-- {{else}} --}}
-                <button data-value="3" onclick="toggleSelect(event)" type="button" id="btnAguaRacao" class="active">
+                {{!-- {{else}} --}}
+                <button data-value="3" onclick="toggleSelect(event)" type="button" id="btnAbastecimentoRacaoAgua" class="active">
                   Água e Ração
                 </button>
               </div>
